<resources>
    <string name="app_name">Music</string>
    <string name="name_album">Name Album</string>
    <string name="name_artist">Name Artist</string>
    <string name="name_song">Name Song</string>
    <string name="name_playlist">Name Playlist</string>
    <string name="sum_album">Sum Album</string>
    <string name="sum_song">Sum Song</string>
    <string name="sum_song_album">Sum Abum | Sum Song</string>
    <string name="song"> Song</string>
    <string name="choose_list_song">Select list songs</string>
    <string name="added_playlist">Added playlist!</string>
    <string name="add_to_playlist">Add to playlist!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_playlist">Add new playlist</string>
    <string name="dont_have_playlist">Dont have any playlist!</string>
    <string name="time">00:00</string>
    <string name="updae_name_playlist">Update Name Playlist</string>
    <string name="searchview">Search View</string>
    <string name="queue">Queue List </string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="done">Done</string>
    <string name="go_to_album">Go To Album</string>
    <string name="go_to_artist">Go To Artist</string>
    <string name="play_song">Play Song</string>
    <string name="add_to_playlists">Add To Playlist</string>
    <string name="list_grid">List || Grid</string>
</resources>
