<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_playlist"
        android:textColor="@color/colorBack"
        android:textSize="@dimen/textTitle" />

    <EditText
        android:id="@+id/edtAddPlayList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:textSize="@dimen/textH1"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/yes"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textH1" />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnYes"
            android:layout_toStartOf="@+id/btnYes"
            android:background="@null"
            android:text="@string/no"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textH1" />


    </RelativeLayout>


</LinearLayout>