<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:windowSoftInputMode="stateVisible|adjustPan">

    <LinearLayout
        android:id="@+id/abc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/pink"
        android:orientation="vertical"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgSong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingTop="15dp"
                android:src="@drawable/ic_empty_music" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="@dimen/_20sdp"
            android:paddingRight="@dimen/_20sdp">

            <TextView
                android:id="@+id/pTvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/colorWhite" />

            <SeekBar
                android:id="@+id/pItmSeekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"

                />

            <TextView
                android:id="@+id/pTvSumTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.25"
            android:orientation="vertical">

            <TextView
                android:id="@+id/itmNameSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:freezesText="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLines="1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scrollHorizontally="true"
                android:text="@string/name_song"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/itmNameSingle"
                android:layout_width="@dimen/with_text_nameartist"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:text="@string/name_artist"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.75">

            <ImageView
                android:id="@+id/pImgPlayPause"
                android:layout_width="@dimen/icoin_big"
                android:layout_height="@dimen/icoin_big"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground" />

            <ImageView
                android:id="@+id/pImgPrevious"
                android:layout_width="@dimen/icoin_big"
                android:layout_height="@dimen/icoin_big"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/pImgPlayPause"
                android:layout_toStartOf="@+id/pImgPlayPause"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                android:id="@+id/pShuffle"
                android:layout_width="@dimen/icoin_small"
                android:layout_height="@dimen/icoin_small"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/pImgPrevious"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_shuffle_white_48dp" />

            <ImageView
                android:id="@+id/pRepeat"
                android:layout_width="@dimen/icoin_small"
                android:layout_height="@dimen/icoin_small"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/pImgNext"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_repeat_white_48dp" />

            <ImageView
                android:id="@+id/pImgNext"
                android:layout_width="@dimen/icoin_big"
                android:layout_height="@dimen/icoin_big"
                android:layout_alignTop="@+id/pImgPlayPause"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/pImgPlayPause"
                android:layout_toRightOf="@+id/pImgPlayPause"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/ic_skip_next_white_48dp" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:theme="@style/ThemeOverlay.AppCompat.Dark">

    </android.support.v7.widget.Toolbar>
    <ListView
        android:id="@+id/plistView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abc"
        android:divider="@null">

    </ListView>


</RelativeLayout>

